--- a/index.pug
+++ b/index.pug
@@ -8,7 +8,6 @@ html(lang="en")
     meta(name="supported-color-schemes" ,content="light")
     style
       include components.css
-      include containers.css
     title JIC Newsletter
   body 
     table.newsletter
@@ -65,9 +64,8 @@ html(lang="en")
                           p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   tr
                     td(colspan="2")
-                      a(class="btn-secondary", href="http://") 
-                        span všechny články
-                        img(src=`${apiUrl}/images/arrow.png`)
+                      a(class="btn", href="http://") 
+                        img(src=`${apiUrl}/images/btn-all-articles.png`)
           table.section
             tr
               td
@@ -107,9 +105,8 @@ html(lang="en")
                             span brno-medlánky
                   tr
                     td(colspan="2")
-                      a(class="btn-secondary", href="http://") 
-                        span všechny akce
-                        img(src=`${apiUrl}/images/arrow.png`)
+                      a(class="btn", href="http://") 
+                        img(src=`${apiUrl}/images/btn-all-events.png`)
           table.section
             tr
               td
@@ -173,9 +170,7 @@ html(lang="en")
           a(href="http://", class="blockquote") 
             h2 Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src=`${apiUrl}/images/btn-side.png`)
-              div Zjistit více
-              img(src=`${apiUrl}/images/btn-side.png`)
+              img(src=`${apiUrl}/images/btn-learn-more.png`)
       tr
         td.layout
           a(href="http://", class="figure-banner") 
@@ -184,17 +179,13 @@ html(lang="en")
               h1 Nadpis textového bloku
               p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src=`${apiUrl}/images/btn-side.png`)
-              div Zjistit více
-              img(src=`${apiUrl}/images/btn-side.png`)
+              img(src=`${apiUrl}/images/btn-learn-more.png`)
           a(href="http://", class="figure-banner") 
             div.content
               h1 Nadpis textového bloku
               p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
             div(class="btn") 
-              img(src=`${apiUrl}/images/btn-side.png`)
-              div Zjistit více
-              img(src=`${apiUrl}/images/btn-side.png`)
+              img(src=`${apiUrl}/images/btn-learn-more.png`)
       tr
         td.footer
           img(src=`${apiUrl}/images/header-footer.png`, class="section-header")
@@ -205,7 +196,7 @@ html(lang="en")
               tr
                 td
                   a(href="http://") 
-                    img(src=`${apiUrl}/images/fb-dark.png`)
+                    img(src=`${apiUrl}/images/fb-dark-cutted.png`)
                 td
                   a(href="http://") 
                     img(src=`${apiUrl}/images/in-dark.png`)
